--- a/app/src/main/res/layout/g2_closet_gallery.xml
+++ b/app/src/main/res/layout/g2_closet_gallery.xml
@@ -112,10 +112,11 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout3"
+        android:background="@color/light_gray"
         app:layout_constraintBottom_toTopOf="@id/bottomBar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout3">
 
         <ScrollView
             android:layout_width="match_parent"
