--- a/app/src/main/res/layout/h1_dresser.xml
+++ b/app/src/main/res/layout/h1_dresser.xml
@@ -36,10 +36,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#EEE"
-        app:layout_constraintTop_toBottomOf="@id/topBar"
         app:layout_constraintBottom_toTopOf="@id/toolsPanel"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/topBar" />
 
     <!-- Clothes Toggle Icon -->
     <ImageButton
