--- a/app/src/main/res/layout/f1_camera_act.xml
+++ b/app/src/main/res/layout/f1_camera_act.xml
@@ -82,6 +82,7 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/tagsScrollView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
