--- a/app/src/main/res/layout/d1_feed.xml
+++ b/app/src/main/res/layout/d1_feed.xml
@@ -84,8 +84,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- SwipeRefreshLayout Section -->
-    <!-- I removed the duplicate RecyclerView that was sitting here outside the refresh layout -->
-
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="0dp"
@@ -249,4 +247,18 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <!-- ProgressBar for downloads -->
+    <ProgressBar
+        android:id="@+id/my_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:elevation="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
