--- a/app/src/main/res/layout/f3_camera_edit_dialog_save_image.xml
+++ b/app/src/main/res/layout/f3_camera_edit_dialog_save_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
@@ -68,7 +69,7 @@
             android:contentDescription="New Category"
             android:padding="4dp"
             android:src="@android:drawable/ic_input_add"
-            android:tint="@android:color/black" />
+            app:tint="@android:color/black" />
 
     </LinearLayout>
 
